# brainfuck

./: .gitignore  CMakeLists.txt  Dockerfile  Makefile  Makefile.in  README.md  ast.c  ast.h  compiler.c  compiler.h  config.h  config.h.in  configure  configure.ac  engine.c  engine.h  linker.c  linker.h  main.c  options.c
brainfuck-compiler-in-llvm/: Makefile  brainfuckc  compile  lang.c  lang.h  llvm.c  llvm.h  main.c
brainfuck-interpreter-in-ansi-c/: main.c
brainfuck-interpreter-in-clojure-macro/: project.clj
brainfuck-interpreter-in-clojure-macro/src/me/zzp/: brainfuck.clj
brainfuck-interpreter-in-clojure-macro/src/me/zzp/brainfuck/: core.clj  lang.clj  parser.clj
brainfuck-interpreter-in-llvm-jit/: Makefile  main.c
brainfuck-translator-in-clojure-macro/: project.clj
clojure/src/me/zzp/brainfuck/: lang.clj
llvm-c/: Makefile  ast.c  ast.h  brainfuckc  compiler.c  compiler.h  compiler.l  engine.c  engine.h  lang.c  linker.h  llvm.c  llvm.h  main.c  options.c  options.h  opts.c  opts.h  parser.c  parser.h  parser.y  scanner.c  scanner.h  scanner.l
samples/: hello-world.bf  triangle.bf
src/: compiler.c  crt.h  engine.c  engine.h  fs.cpp  fs.h  linker.cpp  linker.h  main.c  options.c  options.h.in  scanner.l
test/: wc.bf
